# language-model-repair

./: .gitignore  README.md  conftest.py  inject_mechanism.py  main.py  pyproject.toml
compile_model/: compile-sum-model.py  compile_count_model.py  compile_dyck.py  compile_sum_model.py  compile_sum_model_test.py  load_compiled_model.py  tokenizer.py  transformer.py  utils.py
data/: __init__.py  count.py  dyck_3.py  fineweb.py  get_task.py  int_mult.py  int_sum.py  int_sum_test.py  mawps.py
evaluation/: __init__.py  bert_score.py  causality.py  lambada.py  mrpc.py  prompts.py  shakespeare.py  sst2.py  task.py
experiments/: 0001-sum-code.py  0002-reload-compiled-model.py  0003-pretrained-model-with-compiled-embeddings.py  0004-torch-compiled-model.py  0005-cross-attn.py  0006-train-model-with-support.py  0007-edit-pretrained-tokenizer.py  0008-fineweb-use.py
lightning_trainer/: distil.py  distiler.py  finetuner.py  prepare_data_loader.py  prepare_dataloader.py  prepare_unsupervised_data_loader.py  train.py
methods/: get_method.py  in_context_learning.py
methods/distil_algorithm/: method.py
methods/finetuning/: method.py
methods/gated_gradients/: method.py  (+2 more)
plots/: decoding_process.pkl  decoding_process_count.pkl  decoding_process_sum.pkl  generate_data_for_decoding_process.py
support_model/: add_support_model.py  create_tokenizer_translator.py  cross_attention_module.py  cross_attention_module_test.py  self_attention_module.py  self_attention_module_test.py
utils/: __init__.py  constants.py  detach_and_roll.py  modify_tokenizer.py  save_results.py
(+3 files in other folders)
