[tool.poetry]
name = "language-model-repair"
version = "0.1.0"
description = ""
authors = ["tvergara <tomvergara@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-client = "^8.6.3"
pynvim = "^0.5.0"
jupyter = "^1.1.1"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
